popup view 만드는 중

--- a/option.html
+++ b/option.html
@@ -16,6 +16,7 @@
 <form method="post" class="option-form">
     <div class="item">
         <button type="button" id="login-btn">Login</button>
+        <button type="button" id="logout-btn">Logout</button>
     </div>
     <div class="item">
         <label for="follower-login-id">Follower ID</label>
