--- a/popup.html
+++ b/popup.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <title>Twitcher</title>
 
+    <link rel="stylesheet" href="styles/popup.css">
+
+    <script src="scripts/constants.js"></script>
     <script src="scripts/popup.js"></script>
     <script src="scripts/storage.js"></script>
 </head>
 <body>
 
-<h1>Popup Hi</h1>
-<button type="button" id="refresh-btn">Re</button>
-<p id="foo"></p>
 
+<div id="container"></div>
+
+<p id="ts"></p>
+<button type="button" id="refresh-btn">Re</button>
 </body>
 </html>
