modify name and desc

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Twitcher</title>
+    <title>Twitch Stream I follow</title>
 
     <link rel="stylesheet" href="styles/popup.css">
 
