--- a/option.html
+++ b/option.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Twitcher option</title>
+    <title>Twitch Stream I follow</title>
 
     <link rel="stylesheet" href="styles/option.css">
 
