notification fix, on installed handler, fixes

--- a/option.html
+++ b/option.html
@@ -24,6 +24,10 @@
                id="follower-login-id" name="follower-login-id" autocomplete="off">
     </div>
     <div class="item">
+        <label for="notification">Notification</label>
+        <input type="checkbox" id="notification" name="notification">
+    </div>
+    <div class="item">
         <button type="submit" class="save-btn btn">save</button>
         <span id="message"></span>
     </div>
