option tweak, save logs

--- a/option.html
+++ b/option.html
@@ -29,9 +29,10 @@
     </div>
     <div class="item">
         <button type="submit" class="save-btn btn">save</button>
-        <span id="message"></span>
     </div>
 </form>
+
+<div id="message-container"></div>
 
 </body>
 </html>
