--- a/option.html
+++ b/option.html
@@ -28,6 +28,10 @@
         <input type="checkbox" id="notification" name="notification">
     </div>
     <div class="item">
+        <label for="dark-mode">Dark mode</label>
+        <input type="checkbox" id="dark-mode" name="dark-mode">
+    </div>
+    <div class="item">
         <button type="submit" class="save-btn btn">save</button>
     </div>
 </form>
