tweaks. modify texts

--- a/src/popup.html
+++ b/src/popup.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 <div id="header">
-    <span id="refresh-btn">
+    <span id="options-btn" class="btn">
+        <i class="fas fa-cog"></i>
+    </span>
+    <span id="refresh-btn" class="btn">
         <i class="fas fa-redo"></i>
     </span>
 </div>
